k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smk-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: smk-web.local          # In /etc/hosts eintragen (siehe Dokumentation)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smk-web-service
                port:
                  number: 80
